@@ -9,6 +9,7 @@ Version 1.5.6
 * Add swift static lib target to support AES GCM.
 * Append 'PkeyAuth/1.0' keyword to the User Agent String to reliably advertise PkeyAuth capability to ADFS
 * Update Identity Core within WPJ to the latest dev branch
+* Fix un-reliable test case using swizzle
 
 Version 1.5.5
 * Fix unused parameter errors for macOS target. (#816)
